--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <div>
-            <button onclick="orderByName()">Ordina per nome</button>
+            <button onclick="orderByTitle()">Ordina per nome</button>
             <button onclick="orderByDate()">Ordina per data</button>
         </div>
         <div id="todo-container">
